--- a/Portfólio.css
+++ b/Portfólio.css
@@ -3,14 +3,87 @@ h1{
     color:#243645; /*Aplica a cor laranja*/
     font-size: 3rem; /*Altera o Tamanho*/
     margin-bottom: 30px; /*Espaço abaixo do título*/
+    font-style: italic;
 }
 h2{
     text-align: left;
     color: black;
     font-size: 1,5rem;
     margin-bottom: 20px;
+    font-style: italic;
 }
-elemento {
-    background-color: #d2baa2 #b69f88;
-  }
+p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    background-image: linear-gradient(to bottom, #ba893d, #d2baa2, #d1bba6);
+}
   /*Cores que devem ser utilizadas: #d2baa2, #b69f88, #243645, #000000 e #efece8*/
+  .perfil{
+      background-color: #aaa;  
+      width: 400px;
+      height: 400px;
+      overflow: hidden;
+      position: relative;
+      border-radius: 50%;
+      animation: flutuar 5s ease-in-out infinite;
+  }
+  .perfil:hover{
+    transform: scale(1.03);
+  }
+  .card {
+      background-color: rgb(41, 44, 47);
+      border-radius: 15px;
+      margin: 20px auto;
+      overflow: inline-block;
+      display: inline-block;
+      /* faz com que um elemento se comporte como um bloco, mas sem quebrar a linha — ou seja, ele pode ficar ao lado de outros elementos na mesma linha*/
+      vertical-align: top;
+      /*alinha um elemento ao topo de seu contêiner ou em relação ao conteúdo da linha.*/
+      height: 400px;
+      transition: transform 0.3 ease;
+  }
+  .img:hover{
+      transform: scale(1.03)
+  }
+  .card-img-top{
+    width: 50%;
+    height: 40%;
+  }
+  .btn-primary{
+    background-color: #009688;/*Cor de fundo*/
+    color: white;/*Cor da Letra*/
+    padding: 10px 16px;/*Espaço interno na horizontal e vertical*/
+    border-radius: 8px;/*Arredondar as bordas*/
+    text-align: center;/*Centralizar o texto*/
+    margin-left: 10px;/*Espaço externo entre as bordas do botão e o limite do card*/
+}
+.btn-primary:hover{
+    transform-style: rgb(0, 128, 122);
+    background-color: #1b0096;
+    text-decoration: none;
+}
+img{
+    width: 100%;/*Ocupa 100% da largura do elemento em que ela está*/
+    max-width: 600px;/*Limite de largura*/
+    height: auto;/*Manter a proporção*/
+    border-radius: 12px;/*Bordas arredondadas*/
+    margin: 10px 0px;/*Espaçamento acima e abaixo entre a img e o conteúdo*/
+}
+img{
+    transition: ease-in-out;
+}
+.thumbnail{
+    top: -50px;
+    left: -10px;
+    height: 300px;
+    display: inline-block;
+    z-index: 999;
+    cursor: pointer;
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+.thumbnail:hover{
+    transform: scale(1.03);
+}
