--- a/Portfólio.css
+++ b/Portfólio.css
@@ -87,3 +87,21 @@ img{
 .thumbnail:hover{
     transform: scale(1.03);
 }
+.icon-menu{
+    display: flex;/*Alinhar Itens Horizontalmente*/
+    justify-content: space-around;/*Distribuir o espaçamento de forma linear (igual) entre eles*/
+    background: linear-gradient(to right, rgb(86, 165, 179), rgba(6, 176, 199, 0.993) );
+    padding: 15px;/*Espaço interno entre os itens do menu*/
+    position: fixed;/*Fixa o menu na tela na sua posição original, no caso horizontal*/
+    width: 100%;
+    z-index: 1000;/*Garante a sobreposição do menu em relação aos itens da tela*/
+}
+.icon-menu a{
+    text-decoration: none;
+    color: white;
+   /*font-style: ;Ajusta o tamanho do texto (fonte)*/
+    transition: transform 0.5s ease-in-out;
+}
+.icon-menu a:hover{
+    transform: scale(1.1);/*Aumenta o tamanho do elemento no nosso caso o link em 10%*/ 
+}
